// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilmDetails renders correctly with details 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FilmDetails
    details={
      Object {
        "genres": "Thriller, Crime",
        "overview": "Lorem ipsum dolor sit amet.",
        "poster_path": "/img1234_0987",
        "release_date": "1999",
        "runtime": "154",
        "title": "Pulp Fiction",
        "vote_average": 8.3,
      }
    }
    fetching={false}
    getFilmDetailsAsync={[Function]}
    match={
      Object {
        "params": Object {
          "id": "680",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <div
        id="details"
      >
        <Poster
          path="/img1234_0987"
        />
        <div
          className="info"
        >
          <h2>
            <span
              className="title text-primary"
            >
              Pulp Fiction
            </span>
            <span
              className="rating"
            >
              8.3
            </span>
          </h2>
          <p
            className="genre text-basic"
          >
            Thriller, Crime
          </p>
          <p
            className="numbers"
          >
            <span
              className="release-year"
            >
              1999
            </span>
            <span
              className="duration"
            >
              154
            </span>
          </p>
          <p
            className="description text-basic"
          >
            Lorem ipsum dolor sit amet.
          </p>
        </div>
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Poster
            path="/img1234_0987"
          />,
          <div
            className="info"
          >
            <h2>
              <span
                className="title text-primary"
              >
                Pulp Fiction
              </span>
              <span
                className="rating"
              >
                8.3
              </span>
            </h2>
            <p
              className="genre text-basic"
            >
              Thriller, Crime
            </p>
            <p
              className="numbers"
            >
              <span
                className="release-year"
              >
                1999
              </span>
              <span
                className="duration"
              >
                154
              </span>
            </p>
            <p
              className="description text-basic"
            >
              Lorem ipsum dolor sit amet.
            </p>
          </div>,
        ],
        "id": "details",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "path": "/img1234_0987",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2>
                <span
                  className="title text-primary"
                >
                  Pulp Fiction
                </span>
                <span
                  className="rating"
                >
                  8.3
                </span>
              </h2>,
              <p
                className="genre text-basic"
              >
                Thriller, Crime
              </p>,
              <p
                className="numbers"
              >
                <span
                  className="release-year"
                >
                  1999
                </span>
                <span
                  className="duration"
                >
                  154
                </span>
              </p>,
              <p
                className="description text-basic"
              >
                Lorem ipsum dolor sit amet.
              </p>,
            ],
            "className": "info",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="title text-primary"
                  >
                    Pulp Fiction
                  </span>,
                  <span
                    className="rating"
                  >
                    8.3
                  </span>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Pulp Fiction",
                    "className": "title text-primary",
                  },
                  "ref": null,
                  "rendered": "Pulp Fiction",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": 8.3,
                    "className": "rating",
                  },
                  "ref": null,
                  "rendered": 8.3,
                  "type": "span",
                },
              ],
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Thriller, Crime",
                "className": "genre text-basic",
              },
              "ref": null,
              "rendered": "Thriller, Crime",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="release-year"
                  >
                    1999
                  </span>,
                  <span
                    className="duration"
                  >
                    154
                  </span>,
                ],
                "className": "numbers",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": "1999",
                    "className": "release-year",
                  },
                  "ref": null,
                  "rendered": "1999",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": "154",
                    "className": "duration",
                  },
                  "ref": null,
                  "rendered": "154",
                  "type": "span",
                },
              ],
              "type": "p",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Lorem ipsum dolor sit amet.",
                "className": "description text-basic",
              },
              "ref": null,
              "rendered": "Lorem ipsum dolor sit amet.",
              "type": "p",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <div
          id="details"
        >
          <Poster
            path="/img1234_0987"
          />
          <div
            className="info"
          >
            <h2>
              <span
                className="title text-primary"
              >
                Pulp Fiction
              </span>
              <span
                className="rating"
              >
                8.3
              </span>
            </h2>
            <p
              className="genre text-basic"
            >
              Thriller, Crime
            </p>
            <p
              className="numbers"
            >
              <span
                className="release-year"
              >
                1999
              </span>
              <span
                className="duration"
              >
                154
              </span>
            </p>
            <p
              className="description text-basic"
            >
              Lorem ipsum dolor sit amet.
            </p>
          </div>
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Poster
              path="/img1234_0987"
            />,
            <div
              className="info"
            >
              <h2>
                <span
                  className="title text-primary"
                >
                  Pulp Fiction
                </span>
                <span
                  className="rating"
                >
                  8.3
                </span>
              </h2>
              <p
                className="genre text-basic"
              >
                Thriller, Crime
              </p>
              <p
                className="numbers"
              >
                <span
                  className="release-year"
                >
                  1999
                </span>
                <span
                  className="duration"
                >
                  154
                </span>
              </p>
              <p
                className="description text-basic"
              >
                Lorem ipsum dolor sit amet.
              </p>
            </div>,
          ],
          "id": "details",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "path": "/img1234_0987",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2>
                  <span
                    className="title text-primary"
                  >
                    Pulp Fiction
                  </span>
                  <span
                    className="rating"
                  >
                    8.3
                  </span>
                </h2>,
                <p
                  className="genre text-basic"
                >
                  Thriller, Crime
                </p>,
                <p
                  className="numbers"
                >
                  <span
                    className="release-year"
                  >
                    1999
                  </span>
                  <span
                    className="duration"
                  >
                    154
                  </span>
                </p>,
                <p
                  className="description text-basic"
                >
                  Lorem ipsum dolor sit amet.
                </p>,
              ],
              "className": "info",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <span
                      className="title text-primary"
                    >
                      Pulp Fiction
                    </span>,
                    <span
                      className="rating"
                    >
                      8.3
                    </span>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Pulp Fiction",
                      "className": "title text-primary",
                    },
                    "ref": null,
                    "rendered": "Pulp Fiction",
                    "type": "span",
                  },
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": 8.3,
                      "className": "rating",
                    },
                    "ref": null,
                    "rendered": 8.3,
                    "type": "span",
                  },
                ],
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": "Thriller, Crime",
                  "className": "genre text-basic",
                },
                "ref": null,
                "rendered": "Thriller, Crime",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <span
                      className="release-year"
                    >
                      1999
                    </span>,
                    <span
                      className="duration"
                    >
                      154
                    </span>,
                  ],
                  "className": "numbers",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": "1999",
                      "className": "release-year",
                    },
                    "ref": null,
                    "rendered": "1999",
                    "type": "span",
                  },
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": "154",
                      "className": "duration",
                    },
                    "ref": null,
                    "rendered": "154",
                    "type": "span",
                  },
                ],
                "type": "p",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": "Lorem ipsum dolor sit amet.",
                  "className": "description text-basic",
                },
                "ref": null,
                "rendered": "Lorem ipsum dolor sit amet.",
                "type": "p",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`FilmDetails renders correctly with fetching 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FilmDetails
    details={
      Object {
        "genres": "Thriller, Crime",
        "overview": "Lorem ipsum dolor sit amet.",
        "poster_path": "/img1234_0987",
        "release_date": "1999",
        "runtime": "154",
        "title": "Pulp Fiction",
        "vote_average": 8.3,
      }
    }
    fetching={true}
    getFilmDetailsAsync={[Function]}
    match={
      Object {
        "params": Object {
          "id": "680",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <Loading
        className=""
        color="#fff"
        delay={0}
        height={64}
        type="bars"
        width={64}
      />,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "className": "",
        "color": "#fff",
        "delay": 0,
        "height": 64,
        "type": "bars",
        "width": 64,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <Loading
          className=""
          color="#fff"
          delay={0}
          height={64}
          type="bars"
          width={64}
        />,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "className": "",
          "color": "#fff",
          "delay": 0,
          "height": 64,
          "type": "bars",
          "width": 64,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`FilmDetails renders correctly with newProps 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FilmDetails
    details={
      Object {
        "genres": "Thriller, Crime",
        "overview": "Lorem ipsum dolor sit amet.",
        "poster_path": "/img1234_0987",
        "release_date": "1999",
        "runtime": "154",
        "title": "Pulp Fiction",
        "vote_average": 8.3,
      }
    }
    fetching={false}
    getFilmDetailsAsync={[Function]}
    match={
      Object {
        "params": Object {
          "id": "221",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <div
        id="details"
      >
        <Poster
          path="/img1234_0987"
        />
        <div
          className="info"
        >
          <h2>
            <span
              className="title text-primary"
            >
              Pulp Fiction
            </span>
            <span
              className="rating"
            >
              8.3
            </span>
          </h2>
          <p
            className="genre text-basic"
          >
            Thriller, Crime
          </p>
          <p
            className="numbers"
          >
            <span
              className="release-year"
            >
              1999
            </span>
            <span
              className="duration"
            >
              154
            </span>
          </p>
          <p
            className="description text-basic"
          >
            Lorem ipsum dolor sit amet.
          </p>
        </div>
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Poster
            path="/img1234_0987"
          />,
          <div
            className="info"
          >
            <h2>
              <span
                className="title text-primary"
              >
                Pulp Fiction
              </span>
              <span
                className="rating"
              >
                8.3
              </span>
            </h2>
            <p
              className="genre text-basic"
            >
              Thriller, Crime
            </p>
            <p
              className="numbers"
            >
              <span
                className="release-year"
              >
                1999
              </span>
              <span
                className="duration"
              >
                154
              </span>
            </p>
            <p
              className="description text-basic"
            >
              Lorem ipsum dolor sit amet.
            </p>
          </div>,
        ],
        "id": "details",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "path": "/img1234_0987",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2>
                <span
                  className="title text-primary"
                >
                  Pulp Fiction
                </span>
                <span
                  className="rating"
                >
                  8.3
                </span>
              </h2>,
              <p
                className="genre text-basic"
              >
                Thriller, Crime
              </p>,
              <p
                className="numbers"
              >
                <span
                  className="release-year"
                >
                  1999
                </span>
                <span
                  className="duration"
                >
                  154
                </span>
              </p>,
              <p
                className="description text-basic"
              >
                Lorem ipsum dolor sit amet.
              </p>,
            ],
            "className": "info",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="title text-primary"
                  >
                    Pulp Fiction
                  </span>,
                  <span
                    className="rating"
                  >
                    8.3
                  </span>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Pulp Fiction",
                    "className": "title text-primary",
                  },
                  "ref": null,
                  "rendered": "Pulp Fiction",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": 8.3,
                    "className": "rating",
                  },
                  "ref": null,
                  "rendered": 8.3,
                  "type": "span",
                },
              ],
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Thriller, Crime",
                "className": "genre text-basic",
              },
              "ref": null,
              "rendered": "Thriller, Crime",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="release-year"
                  >
                    1999
                  </span>,
                  <span
                    className="duration"
                  >
                    154
                  </span>,
                ],
                "className": "numbers",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": "1999",
                    "className": "release-year",
                  },
                  "ref": null,
                  "rendered": "1999",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": "154",
                    "className": "duration",
                  },
                  "ref": null,
                  "rendered": "154",
                  "type": "span",
                },
              ],
              "type": "p",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Lorem ipsum dolor sit amet.",
                "className": "description text-basic",
              },
              "ref": null,
              "rendered": "Lorem ipsum dolor sit amet.",
              "type": "p",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <div
          id="details"
        >
          <Poster
            path="/img1234_0987"
          />
          <div
            className="info"
          >
            <h2>
              <span
                className="title text-primary"
              >
                Pulp Fiction
              </span>
              <span
                className="rating"
              >
                8.3
              </span>
            </h2>
            <p
              className="genre text-basic"
            >
              Thriller, Crime
            </p>
            <p
              className="numbers"
            >
              <span
                className="release-year"
              >
                1999
              </span>
              <span
                className="duration"
              >
                154
              </span>
            </p>
            <p
              className="description text-basic"
            >
              Lorem ipsum dolor sit amet.
            </p>
          </div>
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Poster
              path="/img1234_0987"
            />,
            <div
              className="info"
            >
              <h2>
                <span
                  className="title text-primary"
                >
                  Pulp Fiction
                </span>
                <span
                  className="rating"
                >
                  8.3
                </span>
              </h2>
              <p
                className="genre text-basic"
              >
                Thriller, Crime
              </p>
              <p
                className="numbers"
              >
                <span
                  className="release-year"
                >
                  1999
                </span>
                <span
                  className="duration"
                >
                  154
                </span>
              </p>
              <p
                className="description text-basic"
              >
                Lorem ipsum dolor sit amet.
              </p>
            </div>,
          ],
          "id": "details",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "path": "/img1234_0987",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2>
                  <span
                    className="title text-primary"
                  >
                    Pulp Fiction
                  </span>
                  <span
                    className="rating"
                  >
                    8.3
                  </span>
                </h2>,
                <p
                  className="genre text-basic"
                >
                  Thriller, Crime
                </p>,
                <p
                  className="numbers"
                >
                  <span
                    className="release-year"
                  >
                    1999
                  </span>
                  <span
                    className="duration"
                  >
                    154
                  </span>
                </p>,
                <p
                  className="description text-basic"
                >
                  Lorem ipsum dolor sit amet.
                </p>,
              ],
              "className": "info",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <span
                      className="title text-primary"
                    >
                      Pulp Fiction
                    </span>,
                    <span
                      className="rating"
                    >
                      8.3
                    </span>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Pulp Fiction",
                      "className": "title text-primary",
                    },
                    "ref": null,
                    "rendered": "Pulp Fiction",
                    "type": "span",
                  },
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": 8.3,
                      "className": "rating",
                    },
                    "ref": null,
                    "rendered": 8.3,
                    "type": "span",
                  },
                ],
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": "Thriller, Crime",
                  "className": "genre text-basic",
                },
                "ref": null,
                "rendered": "Thriller, Crime",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <span
                      className="release-year"
                    >
                      1999
                    </span>,
                    <span
                      className="duration"
                    >
                      154
                    </span>,
                  ],
                  "className": "numbers",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": "1999",
                      "className": "release-year",
                    },
                    "ref": null,
                    "rendered": "1999",
                    "type": "span",
                  },
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": "154",
                      "className": "duration",
                    },
                    "ref": null,
                    "rendered": "154",
                    "type": "span",
                  },
                ],
                "type": "p",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": "Lorem ipsum dolor sit amet.",
                  "className": "description text-basic",
                },
                "ref": null,
                "rendered": "Lorem ipsum dolor sit amet.",
                "type": "p",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`FilmDetails renders correctly with same props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FilmDetails
    details={
      Object {
        "genres": "Thriller, Crime",
        "overview": "Lorem ipsum dolor sit amet.",
        "poster_path": "/img1234_0987",
        "release_date": "1999",
        "runtime": "154",
        "title": "Pulp Fiction",
        "vote_average": 8.3,
      }
    }
    fetching={false}
    getFilmDetailsAsync={[Function]}
    match={
      Object {
        "params": Object {
          "id": "680",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <div
        id="details"
      >
        <Poster
          path="/img1234_0987"
        />
        <div
          className="info"
        >
          <h2>
            <span
              className="title text-primary"
            >
              Pulp Fiction
            </span>
            <span
              className="rating"
            >
              8.3
            </span>
          </h2>
          <p
            className="genre text-basic"
          >
            Thriller, Crime
          </p>
          <p
            className="numbers"
          >
            <span
              className="release-year"
            >
              1999
            </span>
            <span
              className="duration"
            >
              154
            </span>
          </p>
          <p
            className="description text-basic"
          >
            Lorem ipsum dolor sit amet.
          </p>
        </div>
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Poster
            path="/img1234_0987"
          />,
          <div
            className="info"
          >
            <h2>
              <span
                className="title text-primary"
              >
                Pulp Fiction
              </span>
              <span
                className="rating"
              >
                8.3
              </span>
            </h2>
            <p
              className="genre text-basic"
            >
              Thriller, Crime
            </p>
            <p
              className="numbers"
            >
              <span
                className="release-year"
              >
                1999
              </span>
              <span
                className="duration"
              >
                154
              </span>
            </p>
            <p
              className="description text-basic"
            >
              Lorem ipsum dolor sit amet.
            </p>
          </div>,
        ],
        "id": "details",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "path": "/img1234_0987",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2>
                <span
                  className="title text-primary"
                >
                  Pulp Fiction
                </span>
                <span
                  className="rating"
                >
                  8.3
                </span>
              </h2>,
              <p
                className="genre text-basic"
              >
                Thriller, Crime
              </p>,
              <p
                className="numbers"
              >
                <span
                  className="release-year"
                >
                  1999
                </span>
                <span
                  className="duration"
                >
                  154
                </span>
              </p>,
              <p
                className="description text-basic"
              >
                Lorem ipsum dolor sit amet.
              </p>,
            ],
            "className": "info",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="title text-primary"
                  >
                    Pulp Fiction
                  </span>,
                  <span
                    className="rating"
                  >
                    8.3
                  </span>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Pulp Fiction",
                    "className": "title text-primary",
                  },
                  "ref": null,
                  "rendered": "Pulp Fiction",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": 8.3,
                    "className": "rating",
                  },
                  "ref": null,
                  "rendered": 8.3,
                  "type": "span",
                },
              ],
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Thriller, Crime",
                "className": "genre text-basic",
              },
              "ref": null,
              "rendered": "Thriller, Crime",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="release-year"
                  >
                    1999
                  </span>,
                  <span
                    className="duration"
                  >
                    154
                  </span>,
                ],
                "className": "numbers",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": "1999",
                    "className": "release-year",
                  },
                  "ref": null,
                  "rendered": "1999",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": "154",
                    "className": "duration",
                  },
                  "ref": null,
                  "rendered": "154",
                  "type": "span",
                },
              ],
              "type": "p",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Lorem ipsum dolor sit amet.",
                "className": "description text-basic",
              },
              "ref": null,
              "rendered": "Lorem ipsum dolor sit amet.",
              "type": "p",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <div
          id="details"
        >
          <Poster
            path="/img1234_0987"
          />
          <div
            className="info"
          >
            <h2>
              <span
                className="title text-primary"
              >
                Pulp Fiction
              </span>
              <span
                className="rating"
              >
                8.3
              </span>
            </h2>
            <p
              className="genre text-basic"
            >
              Thriller, Crime
            </p>
            <p
              className="numbers"
            >
              <span
                className="release-year"
              >
                1999
              </span>
              <span
                className="duration"
              >
                154
              </span>
            </p>
            <p
              className="description text-basic"
            >
              Lorem ipsum dolor sit amet.
            </p>
          </div>
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Poster
              path="/img1234_0987"
            />,
            <div
              className="info"
            >
              <h2>
                <span
                  className="title text-primary"
                >
                  Pulp Fiction
                </span>
                <span
                  className="rating"
                >
                  8.3
                </span>
              </h2>
              <p
                className="genre text-basic"
              >
                Thriller, Crime
              </p>
              <p
                className="numbers"
              >
                <span
                  className="release-year"
                >
                  1999
                </span>
                <span
                  className="duration"
                >
                  154
                </span>
              </p>
              <p
                className="description text-basic"
              >
                Lorem ipsum dolor sit amet.
              </p>
            </div>,
          ],
          "id": "details",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "path": "/img1234_0987",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2>
                  <span
                    className="title text-primary"
                  >
                    Pulp Fiction
                  </span>
                  <span
                    className="rating"
                  >
                    8.3
                  </span>
                </h2>,
                <p
                  className="genre text-basic"
                >
                  Thriller, Crime
                </p>,
                <p
                  className="numbers"
                >
                  <span
                    className="release-year"
                  >
                    1999
                  </span>
                  <span
                    className="duration"
                  >
                    154
                  </span>
                </p>,
                <p
                  className="description text-basic"
                >
                  Lorem ipsum dolor sit amet.
                </p>,
              ],
              "className": "info",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <span
                      className="title text-primary"
                    >
                      Pulp Fiction
                    </span>,
                    <span
                      className="rating"
                    >
                      8.3
                    </span>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Pulp Fiction",
                      "className": "title text-primary",
                    },
                    "ref": null,
                    "rendered": "Pulp Fiction",
                    "type": "span",
                  },
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": 8.3,
                      "className": "rating",
                    },
                    "ref": null,
                    "rendered": 8.3,
                    "type": "span",
                  },
                ],
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": "Thriller, Crime",
                  "className": "genre text-basic",
                },
                "ref": null,
                "rendered": "Thriller, Crime",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <span
                      className="release-year"
                    >
                      1999
                    </span>,
                    <span
                      className="duration"
                    >
                      154
                    </span>,
                  ],
                  "className": "numbers",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": "1999",
                      "className": "release-year",
                    },
                    "ref": null,
                    "rendered": "1999",
                    "type": "span",
                  },
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": "154",
                      "className": "duration",
                    },
                    "ref": null,
                    "rendered": "154",
                    "type": "span",
                  },
                ],
                "type": "p",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": "Lorem ipsum dolor sit amet.",
                  "className": "description text-basic",
                },
                "ref": null,
                "rendered": "Lorem ipsum dolor sit amet.",
                "type": "p",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`FilmDetails renders correctly without details 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FilmDetails
    details={Object {}}
    fetching={false}
    getFilmDetailsAsync={[Function]}
    match={
      Object {
        "params": Object {
          "id": "680",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): null,
  Symbol(enzyme.__nodes__): Array [
    null,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
